# kundli

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
kundli/: cli.py  config.py  models.py
kundli/calc/: analysis.py  ashtakavarga.py  aspects.py  bhrigu.py  constants.py  dasha.py  engine.py  events.py  events2.py  geocode.py  matching.py  nakshatra_attrs.py  navamsa.py  panchang.py  predict.py  predict2.py  shadbala.py  strength.py  transit.py  utils.py  vargas.py  vimshopaka.py  yogas.py
kundli/display/: terminal.py
kundli/web/: __main__.py  app.py  firestore.py
kundli/web/api/: chart.py  common.py  events.py  geocode.py  matching.py  predict.py  transit.py
kundli/web/i18n/: __init__.py  en.py  hi.py  mr.py
kundli/web/pages/: router.py
kundli/web/templates/: base.html
kundli/web/templates/pages/: chart.html  home.html  match.html  predict.html  questions.html  transit.html
kundli/web/templates/partials/: birth_form.html  chart_north.html  chart_results.html  event_results.html  match_results.html  predict_results.html  transit_results.html
