[project]
name = "kundli"
version = "0.1.0"
description = "Vedic Astrology Birth Chart Generator"
requires-python = ">=3.10"
dependencies = [
    "pyswisseph>=2.10",
    "typer>=0.9",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
]

[project.scripts]
kundli = "kundli.cli:app"
kundli-web = "kundli.web.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
